python/testData/highlighting/underscoresInNumericLiterals.py
# hex
<error descr="Python version 3.5 does not support underscores in numeric literals">0xCAFE_F00D</error>

# oct
<error descr="Python version 3.5 does not support underscores in numeric literals">0o1_23</error>
<error descr="Python version 3.5 does not support this syntax. It requires '0o' prefix for octal literals"><error descr="Python version 3.5 does not support underscores in numeric literals">01_23</error></error>

# bin
<error descr="Python version 3.5 does not support underscores in numeric literals">0b_0011_1111_0100_1110</error>

# dec
<error descr="Python version 3.5 does not support underscores in numeric literals">10_000_000</error>

# pointfloat
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.</error>

# exponentfloat
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23e1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23E1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.e1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.E1_2</error>

<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23e+1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23E+1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.e+1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.E+1_2</error>

<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23e-1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23E-1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.e-1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.E-1_2</error>


<error descr="Python version 3.5 does not support underscores in numeric literals">10_0000_23e1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_0000_23E1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00e1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00E1_2</error>

<error descr="Python version 3.5 does not support underscores in numeric literals">10_0000_23e+1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_0000_23E+1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00e+1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00E+1_2</error>

<error descr="Python version 3.5 does not support underscores in numeric literals">10_0000_23e-1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_0000_23E-1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00e-1_2</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00E-1_2</error>

# imag
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23j</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23J</error>

<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23e1_2j</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_00.00_23e1_2J</error>

<error descr="Python version 3.5 does not support underscores in numeric literals">10_000_000j</error>
<error descr="Python version 3.5 does not support underscores in numeric literals">10_000_000J</error>